# gmsv_concolormsg

./: .editorconfig  Cargo.toml  README.md  build.rs  gmsv_concolormsg.vdf
.github/workflows/: build.yml
src/: colormsg.rs  detour.rs  lib.rs
src/plugin/: mod.rs  plugin.cpp  plugin.hpp
